--- a/pom.xml
+++ b/pom.xml
@@ -64,5 +64,10 @@
             <artifactId>paranamer</artifactId>
             <version>2.4.1</version>
         </dependency>
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+        </dependency>
     </dependencies>
 </project>
