--- a/pom.xml
+++ b/pom.xml
@@ -66,5 +66,10 @@
             <artifactId>commons-fileupload</artifactId>
             <version>1.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-servlet</artifactId>
+            <version>8.1.4.v20120524</version>
+        </dependency>
     </dependencies>
 </project>
