--- a/pom.xml
+++ b/pom.xml
@@ -66,5 +66,20 @@
             <artifactId>jetty-servlet</artifactId>
             <version>8.1.4.v20120524</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.javascript</groupId>
+            <artifactId>closure-compiler</artifactId>
+            <version>r2388</version>
+        </dependency>
+        <dependency>
+            <groupId>com.asual.lesscss</groupId>
+            <artifactId>lesscss-engine</artifactId>
+            <version>1.3.0</version>
+        </dependency>
     </dependencies>
 </project>
