--- a/modules/webi-php/pom.xml
+++ b/modules/webi-php/pom.xml
@@ -36,5 +36,10 @@
       <artifactId>javaee-web-api</artifactId>
       <version>6.0</version>
     </dependency>
+      <dependency>
+          <groupId>com.vonhof</groupId>
+          <artifactId>webi</artifactId>
+          <version>1.0</version>
+      </dependency>
   </dependencies>
 </project>
