--- a/modules/webi-maven/pom.xml
+++ b/modules/webi-maven/pom.xml
@@ -71,7 +71,11 @@
 			<artifactId>maven-settings</artifactId>
 			<version>2.0.6</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.2</version>
+		</dependency>
 
 
 	</dependencies>
