--- a/modules/webi-maven/pom.xml
+++ b/modules/webi-maven/pom.xml
@@ -6,13 +6,26 @@
 
     <groupId>com.vonhof</groupId>
     <artifactId>webi-maven</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
 	<properties>
 		<aetherVersion>1.13.1</aetherVersion>
 		<mavenVersion>3.0.3</mavenVersion>
 		<wagonVersion>1.0</wagonVersion>
 	</properties>
+
+    <distributionManagement>
+        <repository>
+            <id>nexus</id>
+            <name>Releases</name>
+            <url>http://serv3.vonhofmeister.com:8081/nexus/content/repositories/releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>nexus</id>
+            <name>Snapshots</name>
+            <url>http://serv3.vonhofmeister.com:8081/nexus/content/repositories/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 
 	<dependencies>
 		<dependency>
