--- a/modules/webi-client/pom.xml
+++ b/modules/webi-client/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.vonhof</groupId>
   <artifactId>webi-client</artifactId>
-  <version>1.0</version>
+  <version>1.1</version>
   <packaging>jar</packaging>
 
   <name>webi-client</name>
@@ -51,7 +51,7 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>vonhof</groupId>
+      <groupId>com.vonhof</groupId>
       <artifactId>babelshark</artifactId>
       <version>1.0</version>
     </dependency>
