--- a/modules/webi-php/pom.xml
+++ b/modules/webi-php/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.vonhof</groupId>
   <artifactId>webi-php</artifactId>
-  <version>1.0</version>
+  <version>1.0.1</version>
   <packaging>jar</packaging>
 
   <name>webi-php</name>
@@ -37,7 +37,7 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>webi</artifactId>
-      <version>1.0</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>javax.cache</groupId>
@@ -49,10 +49,5 @@
       <artifactId>javaee-web-api</artifactId>
       <version>6.0</version>
     </dependency>
-      <dependency>
-          <groupId>com.vonhof</groupId>
-          <artifactId>webi</artifactId>
-          <version>1.0</version>
-      </dependency>
   </dependencies>
 </project>
