--- a/modules/webi-websockets/pom.xml
+++ b/modules/webi-websockets/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.vonhof</groupId>
   <artifactId>webi-websockets</artifactId>
-  <version>1.0</version>
+  <version>1.0.1</version>
   <packaging>jar</packaging>
 
   <name>webi-websockets</name>
@@ -51,7 +51,7 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>webi</artifactId>
-      <version>1.0</version>
+        <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
