--- a/modules/webi-db/pom.xml
+++ b/modules/webi-db/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.vonhof</groupId>
   <artifactId>webi-db</artifactId>
-  <version>1.0.1</version>
+  <version>1.2.0</version>
   <packaging>jar</packaging>
 
   <name>webi-db</name>
@@ -51,7 +51,7 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>webi</artifactId>
-      <version>1.0.1</version>
+      <version>${project.version}</version>
     </dependency>
   </dependencies>
 </project>
