--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.vonhof</groupId>
     <artifactId>webi</artifactId>
-    <version>1.2.4</version>
+    <version>1.3.0</version>
     <packaging>jar</packaging>
 
     <name>webi</name>
@@ -88,6 +88,11 @@
             <groupId>com.asual.lesscss</groupId>
             <artifactId>lesscss-engine</artifactId>
             <version>1.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.1</version>
         </dependency>
     </dependencies>
 </project>
