--- a/modules/webi-queue/pom.xml
+++ b/modules/webi-queue/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>webi-queue</groupId>
     <artifactId>webi-queue</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.3.5</version>
 
     
 </project>
