--- a/modules/webi-mongo/pom.xml
+++ b/modules/webi-mongo/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.vonhof</groupId>
   <artifactId>webi-mongo</artifactId>
-  <version>1.3.6</version>
+  <version>1.3.7</version>
   <packaging>jar</packaging>
 
   <name>webi-mongo</name>
@@ -51,7 +51,7 @@
     <dependency>
       <groupId>org.mongodb</groupId>
       <artifactId>mongo-java-driver</artifactId>
-      <version>2.8.0</version>
+      <version>2.12.0-rc3</version>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
