--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <repository>
             <id>nexus</id>
             <name>Releases</name>
-            <url>http://serv3.vonhofmeister.com:8081/nexus/content/repositories/releases/</url>
+            <url>${nexus.url}</url>
         </repository>
     </distributionManagement>
 
