--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.vonhof</groupId>
     <artifactId>webi</artifactId>
-    <version>1.3.16</version>
+    <version>1.3.17</version>
     <packaging>jar</packaging>
 
     <name>webi</name>
@@ -47,7 +47,12 @@
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-server</artifactId>
-            <version>8.1.2.v20120308</version>
+            <version>9.2.2.v20140723</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-servlets</artifactId>
+            <version>9.2.2.v20140723</version>
         </dependency>
         <dependency>
             <groupId>com.vonhof</groupId>
@@ -72,7 +77,7 @@
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-servlet</artifactId>
-            <version>8.1.4.v20120524</version>
+            <version>9.2.2.v20140723</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
