--- a/modules/webi-websockets/pom.xml
+++ b/modules/webi-websockets/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.vonhof</groupId>
   <artifactId>webi-websockets</artifactId>
-  <version>1.3.17</version>
+  <version>1.3.18</version>
   <packaging>jar</packaging>
 
   <name>webi-websockets</name>
@@ -54,9 +54,9 @@
       <version>2.4</version>
     </dependency>
     <dependency>
-      <groupId>org.eclipse.jetty</groupId>
-      <artifactId>jetty-websocket</artifactId>
-      <version>8.1.5.v20120716</version>
+      <groupId>org.eclipse.jetty.websocket</groupId>
+      <artifactId>websocket-server</artifactId>
+      <version>9.1.2.v20140210</version>
     </dependency>
   </dependencies>
 </project>
