--- a/pom.xml
+++ b/pom.xml
@@ -115,5 +115,17 @@
             <artifactId>log4j-web</artifactId>
             <version>2.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.6.6</version>
+            <classifier>tests</classifier>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.6.1</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
